Setup jekyll and first website test

--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Patrick Davis</title>
-</head>
-<body>
-    Hello World
-</body>
+---
+layout: default
+title: Home
+---
+<h1>Patrick Davis</h1>
+<h3>hello@patdavis.games | Naarm/Melbourne AUS</h3>
+{% include social-media-links.html %}
+<p id="self-intro">Indie gamedev working to create truly unique and interesting games. I want my games to make people think and to re-invigorate the couch-co-op energy I grew up with.</p>
+
+
+<h1>Games</h2>
+{% include games-table.html %}
